# navcanada-scraper

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  grafana_dashboard.json  hello.py  pyproject.toml
app/: requirements.txt  scraper.py
cron/: cronjob
mongo-init/: init-mongo.js
