[project]
name = "navcanada-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo==4.7.2",
    "prometheus-client==0.20.0",
    "python-json-logger==2.0.7",
    "pytz==2024.2",
    "requests==2.31.0",
    "schedule==1.2.2",
]
